# dark-wave

./: CMakeLists.txt  CMakeLists.txt.googletest  CPackConfig.cmake  README.md
.github/workflows/: cmake.yml
src/: config.h  main.cpp
src/callbacks/cipher-callback/: cipher-callback.cpp  cipher-callback.h
src/crypto/: symmetric-encryption.h
src/crypto/aes/aes-gcm/: aes-gcm.cpp  aes-gcm.h
src/crypto/kdf/: kdf.cpp  kdf.h
src/pickers/: pickers.cpp
src/services/encryption/: symmetric-encryption-service.cpp  symmetric-encryption-service.h
src/utils/base64/: base64.cpp  base64.h
src/utils/passphrase-checker/: passphrase-checker.cpp  passphrase-checker.h
src/utils/pickers/: pickers.h
src/utils/salt-generator/: salt-generator.cpp  salt-generator.h
tests/integration/: integration-test.cpp  integration-test.h
tests/integration/correct-encryption-decryption/: correct-encryption-decryption.cpp
tests/integration/incorrect-decryption-ciphertext/: incorrect-decryption-ciphertext.cpp
tests/integration/incorrect-decryption-passphrase/: incorrect-decryption-passphrase.cpp
tests/unit/aes/: aes-tests.cpp
tests/unit/base64/: base64-tests.cpp
tests/unit/kdf/: kdf-tests.cpp
tests/unit/passphrase-checker/: passphrase-checker-tests.cpp
tests/unit/salt-generator/: salt-generator-tests.cpp
ui/: app.slint
